[package]
name = "sim-test"
version = "0.1.0"
edition = "2021"

[dependencies]
encase = { version = "0.10.0", features = ["glam"] }
glam = "0.29.2"
num = "0.4.3"
pollster = { version = "0.4.0", features = ["macro"] }
rand = "0.8.5"
rayon = "1.10.0"
thiserror = "2.0.7"
wgpu = "23.0.1"
winit = "0.30.5"
